--- a/config.yaml
+++ b/config.yaml
@@ -25,3 +25,4 @@ CommandsWorker:
   - cd cloud-ex2 && git pull
   - sudo pip3 install -r cloud-ex2/requirements.txt
   - nohup sudo python3 cloud-ex2/worker.py --port 5000 > worker.log 2>&1 &
+  - echo Running Application
